# Screener

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: default_params.yaml
dashboard/: app.py
dashboard/pages/: autoresearch.py  backtester.py  labeling.py  parameter_tuner.py  pattern_explorer.py  screener_results.py
docs/: index.html
src/screener/: config.py
src/screener/autoresearch/: experiment_log.py  optimizer.py
src/screener/backtesting/: backtester.py  metrics.py  rolling.py
src/screener/data/: cache.py  provider.py  universe.py
src/screener/indicators/: atr.py  moving_averages.py  relative_strength.py  volume.py
src/screener/ml/: features.py  labels.py  trainer.py
src/screener/patterns/: base.py  coil.py  reset.py  reversal.py  trend_template.py  vcp.py
src/screener/pipeline/: screener.py
src/screener/scoring/: ranker.py
src/screener/visualization/: charts.py  overlays.py
